--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.88.15",
     "@react-three/fiber": "^8.15.11",
     "@react-three/postprocessing": "^2.15.11",
+    "axios": "^1.6.3",
     "millify": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
