--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "millify": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-vertical-timeline-component": "^3.6.0",
     "recharts": "^2.10.3"
