--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_APP_EMAILJS_SERVICE_ID=service_gozmtkc
 VITE_APP_EMAILJS_TEMPLATE_ID=template_cjulwxi
 VITE_APP_EMAILJS_PUBLIC_KEY=uwmbFm4YCaiMVzcL8
-VITE_APP_API_URL=http://www.dzmitrymotuz.com
+VITE_APP_API_URL=http://www.api.dzmitrymotuz.com
